--- a/Qt5/Ironmongery/workspace.ui
+++ b/Qt5/Ironmongery/workspace.ui
@@ -33,7 +33,7 @@
    <property name="minimumSize">
     <size>
      <width>900</width>
-     <height>0</height>
+     <height>494</height>
     </size>
    </property>
    <property name="maximumSize">
@@ -416,9 +416,9 @@
       </widget>
       <widget class="QGroupBox" name="objectGroupBox">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <horstretch>1</horstretch>
+         <verstretch>1</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
@@ -465,8 +465,8 @@
          <widget class="GDW::RPG::ObjectForm" name="objectForm" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
+            <horstretch>1</horstretch>
+            <verstretch>1</verstretch>
            </sizepolicy>
           </property>
          </widget>
@@ -489,8 +489,8 @@
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>40</width>
-              <height>20</height>
+              <width>0</width>
+              <height>0</height>
              </size>
             </property>
            </spacer>
