--- a/Qt5/Ironmongery/workspace.ui
+++ b/Qt5/Ironmongery/workspace.ui
@@ -201,7 +201,7 @@
                <bool>false</bool>
               </property>
               <property name="selectionMode">
-               <enum>QAbstractItemView::ExtendedSelection</enum>
+               <enum>QAbstractItemView::SingleSelection</enum>
               </property>
               <property name="selectionBehavior">
                <enum>QAbstractItemView::SelectRows</enum>
