--- a/Qt5/Vehicle/vehicleform.ui
+++ b/Qt5/Vehicle/vehicleform.ui
@@ -88,7 +88,7 @@
            </size>
           </property>
           <property name="text">
-           <string>T-move:</string>
+           <string>Trav mov:</string>
           </property>
           <property name="buddy">
            <cstring>travelMoveLineEdit</cstring>
@@ -110,7 +110,83 @@
            </size>
           </property>
           <property name="toolTip">
-           <string>Travel movement (km per 4 hours)</string>
+           <string>Travel movement. Road movement is followed by off-road movement and water speed, if applicable. For aerial vehicles high flight speed is followed by NOE speed.</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="combatMoveLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Cbt mov:</string>
+          </property>
+          <property name="buddy">
+           <cstring>combatMoveLineEdit</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="combatMoveLineEdit">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="baseSize">
+           <size>
+            <width>50</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>Combat movement. Road movement is followed by off-road movement. For aerial vehicles high flight speed is followed by NOE speed.</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="fuelTypeLabel">
+          <property name="text">
+           <string>Fuel Type:</string>
+          </property>
+          <property name="buddy">
+           <cstring>fuelTypeLineEdit</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QLineEdit" name="fuelTypeLineEdit">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="toolTip">
+           <string>Types of fuel the vehicle can use (G: Gasoline, AvG: Aviation gasoline, D: Diesel, A: Alcohol - methanol and ethanol, C:Coal, W: Wood).</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -214,33 +290,8 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="combatMoveLineEdit">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="baseSize">
-           <size>
-            <width>50</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="toolTip">
-           <string>Combat movement (meters per 5-second turn)</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="combatMoveLabel">
+        <item row="6" column="0">
+         <widget class="QLabel" name="suspLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -254,10 +305,10 @@
            </size>
           </property>
           <property name="text">
-           <string>C-move:</string>
+           <string>Suspens:</string>
           </property>
           <property name="buddy">
-           <cstring>combatMoveLineEdit</cstring>
+           <cstring>suspensionLineEdit</cstring>
           </property>
          </widget>
         </item>
@@ -283,57 +334,6 @@
           </property>
           <property name="readOnly">
            <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0">
-         <widget class="QLabel" name="suspLabel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Suspens:</string>
-          </property>
-          <property name="buddy">
-           <cstring>suspensionLineEdit</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1">
-         <widget class="QLineEdit" name="fuelTypeLineEdit">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="toolTip">
-           <string>Types of fuel the vehicle can use (G: Gasoline, AvG: Aviation gasoline, D: Diesel, A: Alcohol - methanol and ethanol, C:Coal, W: Wood).</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="fuelTypeLabel">
-          <property name="text">
-           <string>Fuel Typ:</string>
-          </property>
-          <property name="buddy">
-           <cstring>fuelTypeLineEdit</cstring>
           </property>
          </widget>
         </item>
@@ -1150,17 +1150,17 @@
          <number>0</number>
         </property>
         <item row="2" column="0">
-         <widget class="QLabel" name="weightLabel">
+         <widget class="QLabel" name="massLabel">
           <property name="text">
-           <string>Weight:</string>
+           <string>Mass:</string>
           </property>
           <property name="buddy">
-           <cstring>weightLineEdit</cstring>
+           <cstring>massLineEdit</cstring>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="weightLineEdit">
+         <widget class="QLineEdit" name="massLineEdit">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1197,7 +1197,7 @@
            </sizepolicy>
           </property>
           <property name="toolTip">
-           <string>Interior cargo capacity, given in kilograms</string>
+           <string>Interior cargo capacity, given in kilograms.</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1225,6 +1225,9 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="toolTip">
+           <string>Number of crew.</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
@@ -1250,6 +1253,9 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="toolTip">
+           <string>Number of passengers.</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1283,6 +1289,9 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="toolTip">
+           <string>Tech-level at which the vehicle is built.</string>
+          </property>
           <property name="inputMask">
            <string/>
           </property>
@@ -1298,7 +1307,7 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="priceLineEdit">
+         <widget class="QLineEdit" name="costLineEdit">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1312,7 +1321,7 @@
            </size>
           </property>
           <property name="toolTip">
-           <string>Price includes all weapons listed under Armament, all ammunition listed under Ammo, and one full load of fuel.</string>
+           <string>Cost includes all weapons listed under Armament, all ammunition listed under Ammo, and one full load of fuel.</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1323,12 +1332,12 @@
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QLabel" name="priceLabel">
+         <widget class="QLabel" name="costLabel">
           <property name="text">
-           <string>Price:</string>
+           <string>Cost:</string>
           </property>
           <property name="buddy">
-           <cstring>priceLineEdit</cstring>
+           <cstring>costLineEdit</cstring>
           </property>
          </widget>
         </item>
@@ -1429,8 +1438,8 @@
   <tabstop>typeLineEdit</tabstop>
   <tabstop>nationalityLineEdit</tabstop>
   <tabstop>techLevelLineEdit</tabstop>
-  <tabstop>priceLineEdit</tabstop>
-  <tabstop>weightLineEdit</tabstop>
+  <tabstop>costLineEdit</tabstop>
+  <tabstop>massLineEdit</tabstop>
   <tabstop>loadLineEdit</tabstop>
   <tabstop>crewLineEdit</tabstop>
   <tabstop>passengerLineEdit</tabstop>
