--- a/Qt5/Weapon/weaponform.ui
+++ b/Qt5/Weapon/weaponform.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>710</width>
+    <width>840</width>
     <height>490</height>
    </rect>
   </property>
@@ -28,19 +28,6 @@
    </property>
    <item>
     <layout class="QGridLayout" name="mainLayout">
-     <item row="2" column="0">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>278</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="0" column="0" colspan="2">
       <layout class="QGridLayout" name="dataLayout">
        <property name="verticalSpacing">
@@ -384,7 +371,20 @@
        </item>
       </layout>
      </item>
-     <item row="1" column="0" colspan="2">
+     <item row="3" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>278</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="2" column="0" colspan="2">
       <widget class="QFrame" name="svgFrame">
        <property name="minimumSize">
         <size>
@@ -403,12 +403,29 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QPlainTextEdit" name="descriptionTextEdit">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>1</horstretch>
+         <verstretch>1</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="lineWidth">
+        <number>1</number>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>wtypLineEdit</tabstop>
+  <tabstop>techLevelLineEdit</tabstop>
   <tabstop>rngLineEdit</tabstop>
   <tabstop>rofLineEdit</tabstop>
   <tabstop>wqualLineEdit</tabstop>
@@ -420,6 +437,7 @@
   <tabstop>pmLineEdit</tabstop>
   <tabstop>plLineEdit</tabstop>
   <tabstop>pxLineEdit</tabstop>
+  <tabstop>descriptionTextEdit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
