--- a/Qt5/Ironmongery/workspace.ui
+++ b/Qt5/Ironmongery/workspace.ui
@@ -341,7 +341,7 @@
              <bool>true</bool>
             </property>
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -352,6 +352,9 @@
               <height>32</height>
              </size>
             </property>
+            <property name="toolTip">
+             <string>Add new object.</string>
+            </property>
             <property name="layoutDirection">
              <enum>Qt::LeftToRight</enum>
             </property>
@@ -359,7 +362,11 @@
              <bool>false</bool>
             </property>
             <property name="text">
-             <string>+</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="Ironmongery.qrc">
+              <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -389,8 +396,15 @@
               <height>32</height>
              </size>
             </property>
+            <property name="toolTip">
+             <string>Remove selected object.</string>
+            </property>
             <property name="text">
-             <string>–</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="Ironmongery.qrc">
+              <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
             </property>
             <property name="default">
              <bool>false</bool>
@@ -509,6 +523,10 @@
             <property name="text">
              <string>Print</string>
             </property>
+            <property name="icon">
+             <iconset resource="Ironmongery.qrc">
+              <normaloff>:/icons/16x16/document-print.png</normaloff>:/icons/16x16/document-print.png</iconset>
+            </property>
            </widget>
           </item>
           <item>
@@ -530,6 +548,10 @@
             </property>
             <property name="text">
              <string>Edit</string>
+            </property>
+            <property name="icon">
+             <iconset resource="Ironmongery.qrc">
+              <normaloff>:/icons/16x16/document-edit.png</normaloff>:/icons/16x16/document-edit.png</iconset>
             </property>
            </widget>
           </item>
@@ -559,6 +581,10 @@
             <property name="text">
              <string>OK</string>
             </property>
+            <property name="icon">
+             <iconset resource="Ironmongery.qrc">
+              <normaloff>:/icons/16x16/dialog-ok-apply.png</normaloff>:/icons/16x16/dialog-ok-apply.png</iconset>
+            </property>
            </widget>
           </item>
          </layout>
@@ -587,6 +613,7 @@
     <addaction name="action_Save"/>
     <addaction name="action_SaveAs"/>
     <addaction name="separator"/>
+    <addaction name="action_ExportSvg"/>
     <addaction name="action_Import"/>
     <addaction name="separator"/>
     <addaction name="action_Print"/>
@@ -635,6 +662,10 @@
    </attribute>
   </widget>
   <action name="action_New">
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-new.png</normaloff>:/icons/16x16/document-new.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;New</string>
    </property>
@@ -646,6 +677,10 @@
    </property>
   </action>
   <action name="action_Open">
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Open...</string>
    </property>
@@ -659,6 +694,10 @@
   <action name="action_Save">
    <property name="enabled">
     <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-save.png</normaloff>:/icons/16x16/document-save.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Save</string>
@@ -674,6 +713,10 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-save-as.png</normaloff>:/icons/16x16/document-save-as.png</iconset>
+   </property>
    <property name="text">
     <string>Save &amp;As...</string>
    </property>
@@ -688,6 +731,10 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/edit-cut.png</normaloff>:/icons/16x16/edit-cut.png</iconset>
+   </property>
    <property name="text">
     <string>Cut</string>
    </property>
@@ -699,6 +746,10 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/edit-copy.png</normaloff>:/icons/16x16/edit-copy.png</iconset>
+   </property>
    <property name="text">
     <string>Copy</string>
    </property>
@@ -709,6 +760,10 @@
   <action name="action_Paste">
    <property name="enabled">
     <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/edit-paste.png</normaloff>:/icons/16x16/edit-paste.png</iconset>
    </property>
    <property name="text">
     <string>Paste</string>
@@ -770,6 +825,10 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-print.png</normaloff>:/icons/16x16/document-print.png</iconset>
+   </property>
    <property name="text">
     <string>Print</string>
    </property>
@@ -781,8 +840,12 @@
    <property name="enabled">
     <bool>true</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-import.png</normaloff>:/icons/16x16/document-import.png</iconset>
+   </property>
    <property name="text">
-    <string>Import</string>
+    <string>Import...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+I</string>
@@ -888,6 +951,10 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+   </property>
    <property name="text">
     <string>Add Object</string>
    </property>
@@ -904,6 +971,21 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+W</string>
+   </property>
+  </action>
+  <action name="action_ExportSvg">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="Ironmongery.qrc">
+     <normaloff>:/icons/16x16/document-export.png</normaloff>:/icons/16x16/document-export.png</iconset>
+   </property>
+   <property name="text">
+    <string>Export SVG...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
    </property>
   </action>
  </widget>
@@ -1259,6 +1341,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>action_ExportSvg</sender>
+   <signal>triggered()</signal>
+   <receiver>Workspace</receiver>
+   <slot>ExportSVG()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>449</x>
+     <y>277</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>About()</slot>
@@ -1278,5 +1376,6 @@
   <slot>ShowVehiclesMenu(QPoint)</slot>
   <slot>ShowWeaponsMenu(QPoint)</slot>
   <slot>Import()</slot>
+  <slot>ExportSVG()</slot>
  </slots>
 </ui>
