--- a/Qt5/Vehicle/vehicleform.ui
+++ b/Qt5/Vehicle/vehicleform.ui
@@ -443,6 +443,16 @@
           </property>
          </widget>
         </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="rFLabel">
+          <property name="text">
+           <string>RF:</string>
+          </property>
+          <property name="buddy">
+           <cstring>rFLineEdit</cstring>
+          </property>
+         </widget>
+        </item>
         <item row="4" column="1">
          <widget class="QLineEdit" name="rFLineEdit">
           <property name="sizePolicy">
@@ -465,13 +475,13 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="rFLabel">
+        <item row="5" column="0">
+         <widget class="QLabel" name="locaLabel">
           <property name="text">
-           <string>RF:</string>
+           <string>Hit Loc:</string>
           </property>
           <property name="buddy">
-           <cstring>rFLineEdit</cstring>
+           <cstring>locaLineEdit</cstring>
           </property>
          </widget>
         </item>
@@ -491,13 +501,23 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="locaLabel">
+        <item row="6" column="0">
+         <widget class="QLabel" name="fireControlLabel">
           <property name="text">
-           <string>Hit Loc:</string>
+           <string>Fire Ctl:</string>
           </property>
-          <property name="buddy">
-           <cstring>locaLineEdit</cstring>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLineEdit" name="fireControlLineEdit">
+          <property name="toolTip">
+           <string>Fire Control</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
