--- a/Qt5/Weapon/weaponform.ui
+++ b/Qt5/Weapon/weaponform.ui
@@ -384,7 +384,10 @@
        </property>
       </spacer>
      </item>
-     <item row="2" column="0" colspan="2">
+     <item row="2" column="0">
+      <widget class="QListView" name="listView"/>
+     </item>
+     <item row="2" column="1">
       <widget class="QFrame" name="svgFrame">
        <property name="minimumSize">
         <size>
