--- a/Qt5/Ironmongery/workspace.ui
+++ b/Qt5/Ironmongery/workspace.ui
@@ -23,6 +23,9 @@
    <iconset resource="Ironmongery.qrc">
     <normaloff>:/icons/sunburst.png</normaloff>:/icons/sunburst.png</iconset>
   </property>
+  <property name="toolTip">
+   <string/>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -182,6 +185,9 @@
               <property name="contextMenuPolicy">
                <enum>Qt::CustomContextMenu</enum>
               </property>
+              <property name="toolTip">
+               <string>Right-click in this view to add or remove items.</string>
+              </property>
               <property name="editTriggers">
                <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
               </property>
@@ -256,6 +262,9 @@
               <property name="contextMenuPolicy">
                <enum>Qt::CustomContextMenu</enum>
               </property>
+              <property name="toolTip">
+               <string>Right-click in this view to add or remove items.</string>
+              </property>
              </widget>
             </item>
            </layout>
@@ -281,7 +290,14 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QTreeView" name="shipTreeView"/>
+             <widget class="QTreeView" name="shipTreeView">
+              <property name="contextMenuPolicy">
+               <enum>Qt::CustomContextMenu</enum>
+              </property>
+              <property name="toolTip">
+               <string>Right-click in this view to add or remove items.</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -318,113 +334,18 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QTreeView" name="unitTreeView"/>
+             <widget class="QTreeView" name="unitTreeView">
+              <property name="contextMenuPolicy">
+               <enum>Qt::CustomContextMenu</enum>
+              </property>
+              <property name="toolTip">
+               <string>Right-click in this view to add or remove items.</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
          </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="buttonsLayout" stretch="0,0,0">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="sizeConstraint">
-           <enum>QLayout::SetDefaultConstraint</enum>
-          </property>
-          <property name="leftMargin">
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QPushButton" name="insertItemButton">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="toolTip">
-             <string>Add new object.</string>
-            </property>
-            <property name="layoutDirection">
-             <enum>Qt::LeftToRight</enum>
-            </property>
-            <property name="autoFillBackground">
-             <bool>false</bool>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="Ironmongery.qrc">
-              <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>16</width>
-              <height>16</height>
-             </size>
-            </property>
-            <property name="default">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="removeItemButton">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
-            </property>
-            <property name="toolTip">
-             <string>Remove selected object.</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="Ironmongery.qrc">
-              <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
-            </property>
-            <property name="default">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="spacerMargin">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
         </item>
        </layout>
       </widget>
@@ -1133,22 +1054,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>insertItemButton</sender>
-   <signal>clicked()</signal>
-   <receiver>Workspace</receiver>
-   <slot>InsertItem()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>18</x>
-     <y>509</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>449</x>
-     <y>277</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>okButton</sender>
    <signal>clicked()</signal>
    <receiver>Workspace</receiver>
@@ -1205,22 +1110,6 @@
     <hint type="sourcelabel">
      <x>-1</x>
      <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>449</x>
-     <y>277</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>removeItemButton</sender>
-   <signal>clicked()</signal>
-   <receiver>Workspace</receiver>
-   <slot>RemoveSelectedItems()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>38</x>
-     <y>509</y>
     </hint>
     <hint type="destinationlabel">
      <x>449</x>
@@ -1381,6 +1270,70 @@
     <hint type="sourcelabel">
      <x>-1</x>
      <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>449</x>
+     <y>277</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>unitTreeView</sender>
+   <signal>customContextMenuRequested(QPoint)</signal>
+   <receiver>Workspace</receiver>
+   <slot>ShowContextMenu(QPoint)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>277</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>449</x>
+     <y>277</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>shipTreeView</sender>
+   <signal>customContextMenuRequested(QPoint)</signal>
+   <receiver>Workspace</receiver>
+   <slot>ShowContextMenu(QPoint)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>277</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>449</x>
+     <y>277</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>unitTreeView</sender>
+   <signal>clicked(QModelIndex)</signal>
+   <receiver>Workspace</receiver>
+   <slot>ItemClicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>277</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>449</x>
+     <y>277</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>shipTreeView</sender>
+   <signal>clicked(QModelIndex)</signal>
+   <receiver>Workspace</receiver>
+   <slot>ItemClicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>277</y>
     </hint>
     <hint type="destinationlabel">
      <x>449</x>
